--- a/atualizacao-dados/index.html
+++ b/atualizacao-dados/index.html
@@ -109,7 +109,7 @@
           width: 48%;
           margin-top: 16px;
         }
-        
+
         input[type='number'] {
             -moz-appearance:textfield;
         }
@@ -290,7 +290,7 @@
             <h1>AINDA BEM QUE VOCÊ VOLTOU!</h1>
           </div>
           <div class="sub-title">
-            <h4>Você precisa atualiar algumas informações para que as empreas visualizem seu currículo:</h4>
+            <h4>Você precisa atualizar algumas informações:</h4>
           </div>
           <div class="box-form">
             <div class="info-form form-group has-error ">
@@ -319,7 +319,7 @@
             </div>
           </div>
           <div class="btn-rescue">
-            <button class="btn" type="submit" name="button">RESGATAR VIP GRÁTIS</button>
+            <button class="btn" type="submit" name="button">ENVIAR</button>
           </div>
         </div>
       </div>
