--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
       <div class="main-cv-left"></div>
       <div class="main-cv-content">
         <div class="green-left">
-          <div class="img-background"style="background-image: url(../desk-opacity.png);"></div>
+          <div class="img-background"style="background-image: url(desk-opacity.png);"></div>
             <div class="img-person">
-              <img src="../person-vector.png" alt="">
+              <img src="person-vector.png" alt="">
             </div>
         </div>
         <div class="white-right">
